{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 6,
  "lineage": "11e49855-5f93-de33-75b4-155ae1323f21",
  "resources": [
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.my_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:046419589911:instance/i-0fd082140cdc9e807",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd082140cdc9e807",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b55925e2e4ecad92",
            "private_dns": "ip-192-168-1-210.ec2.internal",
            "private_ip": "192.168.1.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0eddaf59e532437d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ecd0a331d19a90dd",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03f1586b74e2a11c1"
            ]
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.main",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046419589911:internet-gateway/igw-02ac53e1636263649",
            "id": "igw-02ac53e1636263649",
            "owner_id": "046419589911",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-06d78345850ae5894"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05125869312a3eae9",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ac53e1636263649",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-06d78345850ae5894"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.gw",
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046419589911:security-group/sg-03f75c456d61b8b0d",
            "description": "Security Group For VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f75c456d61b8b0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terra-SG",
            "name_prefix": "",
            "owner_id": "046419589911",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d78345850ae5894"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046419589911:subnet/subnet-0ecd0a331d19a90dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0ecd0a331d19a90dd",
            "map_public_ip_on_launch": false,
            "owner_id": "046419589911",
            "tags": {
              "Name": "Main"
            },
            "vpc_id": "vpc-06d78345850ae5894"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.my_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:046419589911:vpc/vpc-06d78345850ae5894",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03123b60effb46303",
            "default_route_table_id": "rtb-04836efbd5aaff8a6",
            "default_security_group_id": "sg-03f1586b74e2a11c1",
            "dhcp_options_id": "dopt-eb43b691",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06d78345850ae5894",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04836efbd5aaff8a6",
            "owner_id": "046419589911",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}